invalid reference.conf

--- a/etc/reference.config
+++ b/etc/reference.config
@@ -11,10 +11,10 @@ config reference: arachNIDS http://www.whitehats.com/info/IDS
 
 config reference: McAfee    http://vil.nai.com/vil/content/v_
 config reference: nessus    http://cgi.nessus.org/plugins/dump.php3?id=
-config reference: url       http://
+# config reference: url       http://
 config reference: et        http://doc.emergingthreats.net/
 config reference: etpro     http://doc.emergingthreatspro.com/
-config reference: telus     http://
+# config reference: telus     http://
 config reference: osvdb     http://osvdb.org/show/osvdb/
 config reference: threatexpert http://www.threatexpert.com/report.aspx?md5=
 config reference: md5	    http://www.threatexpert.com/report.aspx?md5=
