conf/output: Buffering related config settings
This commit adds 2 EVE output buffering settings
- buffer-size value which specifies the amount of buffering, if any,
  for regular/file output types.
- flush-interval Specifies the cadence at which Suricata will direct
  detect threads to flush EVE output.

Issue: 3449

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -78,6 +78,14 @@ stats:
 plugins:
 #   - /path/to/plugin.so
 
+# The flush-interval governs how often Suricata will instruct the detection
+# threads to flush their EVE output. Specify the value in seconds [1-60]
+# and Suricata will initiate EVE log output flushes at that interval. A value
+# of 0 means no EVE log output flushes are initiated. When the EVE output
+# buffer-size value is non-zero, some EVE output that was written may remain
+# buffered. The flush-interval governs how much buffered data exists.
+#flush-interval: 0
+
 # Configure the type of alert (and other) logging you would like.
 outputs:
   # a line based alerts log similar to Snort's fast.log
@@ -95,6 +103,10 @@ outputs:
       # Enable for multi-threaded eve.json output; output files are amended with
       # an identifier, e.g., eve.9.json
       #threaded: false
+      # Specify the amount of buffering, in bytes, for
+      # this output type. The default value 0 means "no
+      # buffering".
+      buffer-size: 0
       #prefix: "@cee: " # prefix to prepend to each log entry
       # the following are valid when type: syslog above
       #identity: "suricata"
