--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,21 @@
 # Required by Read The Docs
 version: 2
 
-formats: all
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
 
 python:
-  version: "3.8"
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - sphinx-rtd-theme
 
-  # Use an empty install section to avoid RTD from picking up a non-python
-  # requirements.txt file.
-  install: []
+sphinx:
+  builder: html
+  configuration: doc/userguide/conf.py
+  fail_on_warning: false
+
+formats: all
