docs: add requirements config for readthedocs
Apparently, for the new configuration style for read the docs, one of
the ways to pass extra configuration for python is having a requirements
file.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,10 +8,7 @@ build:
 
 python:
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - sphinx-rtd-theme
+    - requirements: doc/userguide/requirements.txt
 
 sphinx:
   builder: html
