eve/dns: introduce version 3 of the log
Version 2 was not reverting the IP addresses in the request as it
was using the flow direction for both message. But as the ethernet
header was reverted, this was not really making sense.

By setting version 3 of the DNS log the IP addresses are swapped
between request and answer.

Issue #6400

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -224,7 +224,8 @@ outputs:
             # https://docs.suricata.io/en/latest/output/eve/eve-json-output.html#dns-v1-format
 
             # As of Suricata 5.0, version 2 of the eve dns output
-            # format is the default.
+            # format is the default. Use version 3 to get IP addresses
+            # swapped correctly in the log between request and answer.
             #version: 2
 
             # Enable/disable this logger. Default: enabled.
